# flappy_bird

./: .gitignore  .rustfmt.toml  Cargo.toml  build_wasm.sh  index.html  readme.md
.github/workflows/: deploy.yml
android/: Cargo.toml  build_android.sh
android/android_studio/: settings.gradle.kts
android/android_studio/app/: build.gradle.kts
android/android_studio/app/src/androidTest/java/xyz/lsy969999/flappy_bevy/: ExampleInstrumentedTest.kt
android/android_studio/app/src/main/: AndroidManifest.xml
android/android_studio/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
android/android_studio/app/src/main/java/xyz/lsy969999/flappy_bevy/: MainActivity.kt
android/android_studio/app/src/main/res/values/: strings.xml  themes.xml
android/android_studio/app/src/main/res/values-night/: themes.xml
android/android_studio/app/src/test/java/xyz/lsy969999/flappy_bevy/: ExampleUnitTest.kt
android/android_studio/gradle/wrapper/: gradle-wrapper.properties
android/src/: lib.rs
ios/: Cargo.toml  build.ios.sh
ios/src/: lib.rs
ios/xcode/flappy_bevy.xcodeproj/: project.pbxproj
ios/xcode/flappy_bevy.xcodeproj/xcshareddata/xcschemes/: bevy_mobile_example.xcscheme
ios/xcode/ios-src/: Info.plist  bindings.h  flappy.swift  flappy_bevy-Bridging-Header.h  main.m
src/: constant.rs  lib.rs  main.rs  my_extensions.rs  prelude.rs
src/components/: bird.rs  button.rs  game.rs  ground.rs  guide.rs  main_menu.rs  mask.rs  mod.rs  pipe.rs  puase.rs  resize.rs  result.rs  score.rs  sparkle.rs  states.rs  timer.rs
src/events/: btn.rs  ffi.rs  game.rs  jump.rs  mod.rs  picking_callback.rs  resize.rs  result.rs  score.rs
src/ffi/: android.rs  desktop.rs  ios.rs  mod.rs  web.rs
src/plugins/: app.rs  assets.rs  ffi.rs  game.rs  guide.rs  inspector.rs  main_menu.rs  mask.rs  mod.rs  picking_callback.rs  resize.rs  tween_callback.rs
src/resources/: assets.rs  config.rs  game.rs  mod.rs  pipe_spawn_timer.rs  resize_scale.rs
src/states/: mod.rs
src/systems/: animation.rs  assets.rs  bird.rs  ffi.rs  game.rs  ground.rs  guide.rs  main_menu.rs  mask.rs  mod.rs  movement.rs  on_game.rs  on_main_menu.rs  on_result.rs  picking_callback.rs  pipe.rs  resize.rs  result.rs  score.rs  touch.rs  tween_callback.rs
wasm/: web.d.ts  web.js  web_bg.wasm.d.ts
web/: Cargo.toml  build_wasm.sh  index.html
