[package]
name = "bevy_flappy_bird"
version = "0.1.0"
edition = "2021"

[features]
default = ["inspector"]
inspector = ["iyes_perf_ui", "bevy-inspector-egui"]

[dependencies]
bevy = {version = "0.14.1", features = ["wav"]}
bevy_asset_loader = "0.21.0"
bevy_framepace = "0.17.1"
bevy_mod_picking = "0.20.1"

iyes_perf_ui = { version = "0.3.0", optional = true }
bevy-inspector-egui = { version = "0.25.2", features = ["bevy_pbr", "bevy_render", "egui_open_url"], default-features = false, optional = true }


# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
