[package]
name = "bevy_flappy_bird"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["android", "ios", "web"]

[features]
default = ["inspector"]
inspector = ["iyes_perf_ui", "bevy-inspector-egui"]

[dependencies]
bevy = { version = "0.14.1", features = [
    "android_shared_stdcxx",
    "png",
    "bevy_asset",
    "bevy_color",
    "bevy_sprite",
    "bevy_winit",
    "default_font",
    "multi_threaded",
    # "webgl2",
    "x11",
], default-features = false }
bevy_asset_loader = "0.21.0"
bevy_framepace = "0.17.1"
bevy_mod_picking = { version = "0.20.1", features = [
    "backend_sprite",
], default-features = false }
avian2d = "0.1.2"
rand = "0.8.5"
bevy_tweening = { version = "0.11.0" }
directories = "5.0.1"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
bevy_kira_audio = { version = "0.20.0", features = [
    "wav",
], default-features = false }

iyes_perf_ui = { version = "0.3.0", optional = true }
bevy-inspector-egui = { version = "0.25.2", features = [
    "bevy_render",
    "egui_open_url",
], default-features = false, optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.93"

[target.'cfg(target_os = "android")'.dependencies]
jni_fn = "0.1.2"
jni = "0.21.1"
ndk-context = "0.1"


[patch.crates-io]
winit = { git = "https://github.com/lsy969999/winit.git", branch = "patch-ios-0.30.0" }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
debug = false
